css changes to fix white space on rigt of mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,11 @@ header ul li a:active{
 	color:pink;
 }
 
-
+.bigwrapper{
+	display:flex;
+	flex-direction:column;
+	overflow-x:hidden;
+}
 
 
 body, #slider, .wrap, .slide-content{
